* Support '/' as shorthand for 'exec' in the dev console. A space is not required after the slash.
* Added 'spawn_level' property to map enemies. This follows the same syntax as the Power property of the same name.
* Add XP scaling tables for scaling enemy reward XP based on enemy level.
* Replace 'immunity' effects with percentage-based resistances.

Engine fixes:

* Fixed set item tooltips showing incorrect number of equipped items if a set item was on an inactive loadout.
* Fixed dev console commands not working if they were preceded by whitespace.
* Fixed spawning entities not counting towards summoned entity count.

Translation updates:

* German (de) update (Wuzzy2)
* Japanese (ja) update (Sato Hayato)
* Chinese (zh) update (Issac Zhang)



Flare v1.13.04

Engine features:

* Added 'bar_gfx' property to menus/enemy.txt for setting the "fill" image

Engine fixes:

* Fix crash when trying to read a non-existent file with INCLUDE
* Fix passive powers not being correctly re-applied after death
* Improve performance of WidgetListBox by caching all items instead of just the visible ones



Flare v1.13 (https://flarerpg.org/2022/01/31/flare-1-13/)

Engine features:

* Added additional requirement properties (requires_status, requires_item, etc) to enemy and NPC map objects. The properties now match what is available for map events.
* When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
* Added optional 'fog-of-war' feature (r-a-cristian-93)
* Added support for multiple sets/loadouts of equipped items (r-a-cristian-93)
* Added random_status attribute to Events for setting/unsetting a random status from a list.
* Reworked gamepad handling using the SDL_GameController API.
* Several new key bindings, many of which will benefit gamepad users.
* Added an "action picker" for interacting with items/powers when using a gamepad or a touchscreen.