@@ -236,6 +236,8 @@ code {
 
 <p><strong>save_fogofwar</strong> | <code>bool</code> | If true, the fog of war layer keeps track of the progress.</p>
 
+<p><strong>mouse_move_deadzone</strong> | <code>float, float : Deadzone while moving, Deadzone while not moving</code> | Adds a deadzone circle around the player to prevent erratic behavior when using mouse movement. Ideally, the deadzone when moving should be less than the deadzone when not moving. Defaults are 0.25 and 0.75 respectively.</p>
+
 <hr />
 
 <h4>EngineSettings: Resolution</h4>
